# grpc-raft

./: CMakeLists.txt  README.md  clear_log.sh  main.cpp
lib/: CMakeLists.txt  ClusterConfig.cpp  ClusterConfig.h  ConsensusModule.cpp  ConsensusModule.h  LogManager.cpp  LogManager.h  PersistentStateManager.cpp  PersistentStateManager.h  Timer.cpp  Timer.h  cluster_config.toml
proto/: Messages.proto
test/: CMakeLists.txt  ModuleTests.cpp  TimerTest.cpp
